gap issue fixed and aligning text done

--- a/greenwheels/greenwheels/src/app/app.component.css
+++ b/greenwheels/greenwheels/src/app/app.component.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
     padding: 0;
+    height: 100%;
+    width: 100%;
     background-color: #304d30;
   }
   
@@ -8,31 +10,40 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    
   }
   
   #mynav {
     background-color: #163020;
-    padding: 30px;
+    padding: 30px 150px;
     display: flex;
     justify-content: flex-start; 
     align-items: center; 
+    width: 81%;
+    
   }
   
   #mynav a {
     text-decoration: none;
+    margin-right: 40px;
+    justify-content: space-between;
   }
   
   #mynav span {
-    font-size: 1.5rem;
+    font-size: 1cm;
     color: #eef0e5;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bold;
+    
     margin-right: 35px;
+    
   }
   
-  #mynav span#about {
-    margin-right: -10px;
-  }
+ #mynav span:first-child{
+  margin-left: -10px;
+ }
+ #mynav span:last-child{
+    margin-right: 46px;
+ }
   
   #mynav span:hover {
     cursor: pointer;
@@ -61,13 +72,13 @@ body {
   }
   
   footer {
-    font-size: 0.5cm;
+    font-size: 0.65cm;
     background-color: #163020;
     color: #333;
     text-align: center;
     padding: 20px;
-    width: 100%;
-    position: relative;
+    width: 98%;
+    
     bottom: 0;
   }
   
